<resources>
    <string name="app_name">Sharing example</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_email">E-mail</string>
    <string name="btn_sms">Sms</string>
    <string name="btn_message">Message</string>
    <string name="btn_all">All apps</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_message">Message</string>
    <string name="title_activity_custom_share">Custom share</string>
    <string name="iv_content_desc">App icon</string>
</resources>
