<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/subject_bmargin"
        android:hint="@string/hint_subject"
        android:imeOptions="actionNext"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_subject"
        android:layout_marginBottom="@dimen/message_bmargin"
        android:hint="@string/hint_message"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_message"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_message" />

    <Button
        android:id="@+id/btn_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_message"
        android:layout_toLeftOf="@id/btn_message"
        android:layout_toStartOf="@id/btn_message"
        android:text="@string/btn_email" />

    <Button
        android:id="@+id/btn_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_message"
        android:layout_toEndOf="@id/btn_message"
        android:layout_toRightOf="@id/btn_message"
        android:text="@string/btn_all" />

</RelativeLayout>
